Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-135115
Oit doesn't work with custom materials
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P1: Critical
Fix Version/s:
6.9.1
,
6.10.0 FF
Affects Version/s:
6.9
Component/s:
Quick: 3D
Labels:
None
Commits:
00869f6d9 (dev), fe37b35b9 (6.9)
Description
When enabling oit and setting opacity to 0.5, the custominstancing demo doesn't render properly.
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Antti Määttä
Reporter:
Antti Määttä
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
25 Mar '25 08:12
Updated:
27 Mar '25 13:00
Resolved:
25 Mar '25 11:57
Gerrit Reviews
There are no open Gerrit changes
Show
There are 2 closed Gerrit changes
Hide
There are 2 closed Gerrit changes
Fix oit with custom materials
Gerrit Review:
Fix oit with custom materials
Gerrit Review: