Fix oit with custom materials

A function is missing a parameter.

Fixes: QTBUG-135115
Pick-to: 6.9
Change-Id: Ibe4d6b31fb3e9f7d10b96246ef5cdc8fbfbefdac
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>